--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "@vercel/style-guide/eslint/browser",
+    "@vercel/style-guide/eslint/next",
+    "@vercel/style-guide/eslint/react"
+  ]
 }
