--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,10 @@
-TURSO_CONNECTION_URL=
-TURSO_AUTH_TOKEN=
+# DB Connection
+TURSO_CONNECTION_URL=""
+TURSO_AUTH_TOKEN=""
+
+# Webhook Base URL
+HOOK_BASE="http://localhost:8080/api/hook/"
+
+# Authentication
+AUTH_SECRET=""
+AUTH_RESEND_KEY="
