--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,6 @@
     "@vercel/style-guide/eslint/browser",
     "@vercel/style-guide/eslint/next",
     "@vercel/style-guide/eslint/react"
-  ]
+  ],
+  "plugins": ["@tanstack/eslint-plugin-query"]
 }
