--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
     "migrate": "drizzle-kit migrate"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.24.0",
     "@auth/drizzle-adapter": "^1.2.0",
     "@libsql/client": "^0.6.2",
     "@tanstack/react-query": "^5.40.1",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.31.1",
+    "fast-xml-parser": "^4.4.0",
     "next": "14.2.3",
     "next-auth": "^5.0.0-beta.19",
     "react": "^18",
